--- a/PROJETO OBJETIVO/index.html
+++ b/PROJETO OBJETIVO/index.html
@@ -41,6 +41,9 @@
                         <img src="assets/images/tech/tailwind-css.png" alt="" id="tail" />
                         <img src="assets/images/tech/git.png" alt="" id="git"/>
                     </div>
+                    <div class="download">
+                        <a href="/Currículo Profissional.pdf" download>Download CV</a>
+                    </div>
                 </div>
                 <div class="rightside">
                     
